--- a/octoprint_speroplugin/templates/speroplugin_settings.jinja2
+++ b/octoprint_speroplugin/templates/speroplugin_settings.jinja2
@@ -71,36 +71,14 @@
     </div> 
 
 
-    <div class="input-control">
-        <label class="control-label">{{ _('pins is same ') }}</label>
-        <div class="controls">
-            <input type="text"  style="width:7em" data-bind="  value: settings.plugins.speroplugin.error">  please check the pins are different
-        </div>
-    </div> 
+ 
 </form>
 
+   <div class="warningText">
+        
+           please check the pin numbers if any of the numbers are the same you can't save
 
-
-
-
-<!-- 
-<div data-bind="visible: settings.plugins.speroplugin.motorPin1==23">
-    ahmet
-</div>
-
-<div data-bind="visible: settings.plugins.speroplugin.motorPin2==18">
-    ahmet
-</div>
-
-
-<div data-bind="visible: settings.plugins.speroplugin.motorPin2==15">
-    ahmet saaSAS
-</div>
-
-<div data-bind="class: settings.plugins.speroplugin.error ? ali : veli">
-    ahmet saaSAS
-</div>
- -->
+    </div>
 
 
 
