--- a/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_settings.jinja2
+++ b/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_settings.jinja2
@@ -4,90 +4,36 @@
       
 </div>   
 
-<form class="form-horizontal">
-    <div class="input-control">
-        <label class="control-label">{{ _('Motor Forward Pin : ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.motorPin1">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Motor Backward: Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.motorPin2">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Switch Front Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.switchFront">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Switch Back Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.switchBack">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Forward Button Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.buttonForward">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Backward Button Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.buttonBackword">
-        </div>
-    </div>
-    <div class="input-control">
-        <label class="control-label">{{ _('Ejecting Button Pin: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.buttonSequence">
-        </div>
-    </div>
 
-</form>
 
-<h4 class="form-title">
-                                TABLE SETTINGS
-</h4>
 
 
 <form class="form-horizontal">
     <div class="input-control">
-        <label class="control-label">{{ _('Table Temperature: ') }}</label>
-        <div class="controls">
-            <input type="number" class="input-block-level " style="width:7em" data-bind="value: settings.plugins.speroplugin.targetBedTemp">
-        </div>
-    </div>
- 
+        <label class="control-label">{{ _('Reloder type : ') }}</label>
+
+        <select data-bind="value: settings.plugins.speroplugin.device">
+        <option value="Reloder">Reloder</option>
+        <option value="Reloder Pro">Reloder Pro</option>
+        </select>
+
+
+</div>
+
+
+
+
+
+
+
+
+<form class="form-horizontal">
     <div class="input-control">
-        <label class="control-label">{{ _('Seconds For Eject Fail: ') }}</label>
+        <label class="control-label">{{ _('Target Bed Temp : ') }}</label>
         <div class="controls">
-            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.delaySeconds,">
+            <input type="number" class="input-block-level" style="width:7em" data-bind="value: settings.plugins.speroplugin.targetBedTemp">
         </div>
-    </div> 
-
-
- 
-</form>
-
-   <div class="warningText">
-        
-           please check the pin numbers if any of the numbers are the same you can't save
-
-    </div>
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
@@ -105,7 +51,6 @@
    
 
    
-
 
 
 
