--- a/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
+++ b/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
@@ -124,10 +124,10 @@
 
       <div class="pause-cancel-buttons">
         <button  data-bind="click: function(){$root.pauseStopQueue()}, visible:  queueState() != 'Cancelled' &&!(queueState() == 'Paused') && !(queueState() == 'Idle'&&itemState() != 'Cancelling')&& itemState()!='Cancelling'" title="Pause printing">
-          <i class="	fas fa-pause"> </i>  </button  data-bind="click: function(){$root.pauseResumeQueue()},visible: (queueState() == 'Cancelled'|| queueState() == 'Paused') && (queueState() != 'Idle'&&itemState() != 'Cancelling')" title="Resume printing">
+          <i class="	fas fa-pause"> </i> 
         </button >
           
-        <button data-bind="click: function(){$root.pauseResumeQueue()},visible: (queueState() == 'Cancelled'|| queueState() == 'Paused') && (queueState() != 'Idle'&&itemState() != 'Cancelling')" title="Resume printing">
+        <button data-bind="click: function(){$root.pauseResumeQueue()},visible: (queueState() == 'Cancelled'|| queueState() == 'Paused') && (queueState() != 'Idle' && (itemState() == 'Finished' || itemState() == 'EjectFaild' || itemState() == 'Failed'  ))" title="Resume printing">
           <i class="	fas fa-play"> </i> 
         </button>
           
@@ -156,6 +156,7 @@
               <span data-bind="text: $data.index()"></span>
               
               <span class=queue-name  data-bind="text: name"></span>
+              
 
               <!-- ko if: $data.state() === "Await" -->
                   <div>
