--- a/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
+++ b/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
@@ -100,6 +100,11 @@
         <i class="fas fa-trash"></i>  
       </button>
 
+      <button id="repeatButton" data-bind="click: repeatOnOff , visible: queueState() == 'Idle'" title="Repeat Queue  ">
+        <i class="	fa fa-repeat"></i>  
+      </button>
+
+
  
 
       <button data-bind="click: startQueue , visible: queueState() == 'Idle'" title="Start printing">
