--- a/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
+++ b/OctoPrint-Speroplugin/octoprint_speroplugin/templates/speroplugin_tab.jinja2
@@ -251,7 +251,7 @@
               <div class=queue-item-adjust-buttons data-bind="visible:($root.queueState() == 'Idle' || $root.queueState() == 'Paused')">
 
 
-                <button data-bind="click: function() { $root.queueItemDuplicat($data.index())}"><i class="	fas fa-copy"></i>  </button>
+                <button data-bind="click: function() { $root.queueItemDuplicate($data.index())}"><i class="	fas fa-copy"></i>  </button>
 
                 <button data-bind="click: function() { $root.queueRemoveItem($data.index())}"><i class="	fas fa-trash"></i> </button>
                 <button data-bind='click: function() { $root.queueItemUp($data.index())}'><i class="fas fa-angle-up"></i> </button>        
