--- a/octoprint_speroplugin/templates/speroplugin_tab.jinja2
+++ b/octoprint_speroplugin/templates/speroplugin_tab.jinja2
@@ -41,7 +41,7 @@
       <div class="information-states">
         <div>
               <center><select class="selected" id="queues" data-bind="options: $root.ports,optionsText: 'device',  value: $root.selectedPort, 
-              optionsCaption:'Select port', event:{ blur :$root.checkCreateQueueEnable() }" style="width:100%;">
+              optionsCaption:'Select port'" style="width:100%;">
               </select></center>
         </div>   
         <div>
